[package]
name = "TerrariaClone"
version = "0.1.0"

[dependencies]
lazy_static = "1.4.0"
crossbeam-channel = "0.4.2"
glutin = "0.24.0"
ezgl = { git = "https://github.com/Crocodoctopus/Ezgl" }
cgmath = "0.18.0"
serde = { version = "1.0.136", features = ["derive"] }
bincode = "1.3.3"
serde_json = "1.0.79"

[[bin]]
name = "client"
path = "src/main_client.rs"

[[bin]]
name = "server"
path = "src/main_server.rs"