[package]
name = "TerrariaClone"
version = "0.1.0"
edition = "2021"

[dependencies]
lazy_static = "1.4.0"
crossbeam-channel = "0.5.6"
glutin = "0.29.1"
ezgl = { git = "https://github.com/Crocodoctopus/Ezgl" }
cgmath = "0.18.0"
serde = { version = "1.0.136", features = ["derive"] }
bincode = "1.3.3"

[profile.release]
lto = "thin"
codegen-units = 2
panic = "abort"

[[bin]]
name = "client"
path = "src/main_client.rs"

[[bin]]
name = "server"
path = "src/main_server.rs"
